# SERQ

./: .gitignore  CLAUDE.md  DEBUG-AUTONOMY.md  POLISH.md  SERQ - Comments.md  SERQ - Feature List.md  SERQ - Master Feature List.md  index.html  package-lock.json  package.json  serq.code-workspace  tsconfig.json  vite.config.ts
.claude/: BLOCK-SELECTION-IMPLEMENTATION.md  CONTEXT-HANDOFF.md  PROJECT-DEBUG-LOG.md  SESSION-HANDOVER.md  STYLING-HIERARCHY-ARCHITECTURE.md  handover.md
.claude/logs/: 2026-02-03-dynamic-config-refactor.md
.planning/: DESIGN-REFERENCE.md  NOTION-STYLE-BLOCKS-PLAN.md  PHASE-0-HANDOFF-V2.md  PHASE-0-HANDOFF-V3.md  PHASE-0-HANDOFF.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  SERQ-V1-GAP-ANALYSIS.md  SESSION-CONTEXT.md  SESSION-HANDOFF.md  STATE.md  TIPTAP-NATIVE-MIGRATION.md  TIPTAP-NATIVE-REBUILD-PLAN.md  TIPTAP-REFERENCE-INDEX.md  UNIFIED-STYLE-SYSTEM-ARCHITECTURE.md  UNIFIED-STYLE-SYSTEM-PLAN.md  VIEWPORT-TRANSFORM-PLAN.md  config.json
.planning/boardroom/: round1-schema-architect.md  round2-devils-advocate.md  round2-operations-engineer.md  round2-presentation-decoupler.md  round2-semantic-graph.md  round2-viable-systems.md  round3-synthesis.md  round4-final-specification.md  warroom-zoom-architecture.md
scripts/: read-log.sh  screenshot.sh
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_versions.sql  002_comments.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: ai.rs  debug_bridge.rs  mod.rs
(+427 files in other folders)
