[package]
name = "serq"
version = "0.1.0"
description = "SERQ Document Editor"
authors = ["Jacques Dubnov"]
edition = "2021"

[lib]
name = "serq_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
reqwest = { version = "0.12", features = ["stream", "json"] }
eventsource-stream = "0.2"
futures = "0.3"
tauri-plugin-keyring = "0.1"
uuid = { version = "1", features = ["v4"] }
